# monDuckAndroid

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vaca/monduckandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/lib/cJSON/: CMakeLists.txt
app/src/main/java/com/vaca/monduckandroid/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vaca/monduckandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
